Fix annoying 1px button background gap on first button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,6 @@ body, input {
 #script-box {
   margin-left: auto;
   margin-right: 1rem;
-  padding-right: 1rem;
   justify-content: center;
 }
 
@@ -251,6 +250,7 @@ body, input {
   color: #3758ce;
   text-decoration: none;
   background-image: url("../img/triangle.svg");
+  background-position-x: -1px;
   background-size: 100%;
   background-repeat: no-repeat;
   min-width: 90px;
